package classes;

public class Interface implements Visible {
    String nom;
    Methode[] methodes;

    public Interface(String nom, Methode[] methodes) {
        this.nom = nom;
        this.methodes = methodes;
    }



}
