package classes;

public interface Visible {
}
