@startuml
package Classes{
abstract class Visible{
-boolean visible
--
+changerVisibilite()
+getVisible()
}
class Classe{
-Hashmap<Classe classefille,boolean visible> classeFilles
--
+changerVisibiliteHeritage()
+getClasseParent()
}
class Methode{
-String nom
-ArrayList<HashMap<String nom,String type>> parametres
-ArrayList<String> modificateurs
-String retour
--
+getParametres()
}
interface ComposantClasse{
}
class Attribut{
-String nom
-String type
-ArrayList<String> modificateurs
--
+getModificateurs()
+getNom()
+getType()
}
class Interface{
+getAttributs()
+getMethodes()
+getVisibleMethodes()
+ajouterMethode(Methode m)
+changerVisibiliteMethode(Methode m)
+changerVisibiliteHeritage()
}
class Package{
-String nom
--
+getClass()
+ajouterClasse(Classe c)
}
}
Visible <|-- Methode
Attribut <|-- Interface
Visible <|-- Attribut
Classe ..|> ComposantClasse
Classe "1"-->"0.1" Classe :-classeParent
Interface "1"-->"0.*" Interface : -interfaces
Interface <|-- Classe
Interface "1"-->"0.*   " Methode : -methodes
Attribut ..|> ComposantClasse
Interface "0.*   "<--"1 " Package : -classes
Package "0.*   "<--"1 " Diagramme : -packages
Interface --> ComposantClasse : -attributs
@enduml